--- a/Loan_Acceptance_Prediction_Challange_AlaaAlmouiz(S2026_176).ipynb
+++ b/Loan_Acceptance_Prediction_Challange_AlaaAlmouiz(S2026_176).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeXSf/tPmNiBPJLuIIi9IY",
+      "authorship_tag": "ABX9TyPaLtAAJx4UjjZXllsnkKG4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,8 +63,15 @@
         "* `Loan_Status` loan approved (Y/N) - TARGET\n",
         "\n",
         "### **Assumptions and Hypothesis**\n",
-        "1. First\n",
-        "2. Second\n"
+        "1. **H1: Credit History is the Most Significant Predictor**\n",
+        "  Null (H0): Credit history has no significant effect on loan approval\n",
+        "Alternative (H1): Credit history has the strongest positive relationship with loan approval\n",
+        "Rationale: Banks typically prioritize credit history as it directly indicates past repayment behaviorst\n",
+        "\n",
+        "2. **H2: Higher Income Increases Loan Approval Probability**\n",
+        "  Null (H0): Income has no relationship with loan approval\n",
+        "Alternative (H1): Applicants with higher combined income (applicant + coapplicant) are more likely to be approved\n",
+        "Rationale: Income determines repayment capacity\n"
       ],
       "metadata": {
         "id": "xIR0_KbFbBFd"
@@ -81,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 318,
+      "execution_count": null,
       "metadata": {
         "id": "G3iI64ppaiNl",
         "colab": {
@@ -142,7 +149,7 @@
       "metadata": {
         "id": "0RG_llvlgbeV"
       },
-      "execution_count": 319,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +162,7 @@
       "metadata": {
         "id": "RptmlmQqhcLP"
       },
-      "execution_count": 320,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +173,7 @@
       "metadata": {
         "id": "E6BGSv6Z6Gpa"
       },
-      "execution_count": 321,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +209,7 @@
         "id": "-kT1Iv6iju0z",
         "outputId": "a856dbb2-3ae2-49f2-a388-39d36a3e3edd"
       },
-      "execution_count": 322,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +464,7 @@
         "id": "ijReJkJcTr7P",
         "outputId": "a351779d-62ae-452b-8ec3-04448bb323c4"
       },
-      "execution_count": 323,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -710,7 +717,7 @@
         "id": "4B1oem6kRh1w",
         "outputId": "00e53b68-b448-40e7-dd93-9785e7798f26"
       },
-      "execution_count": 324,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +762,7 @@
         "id": "6G1lFSRkGu56",
         "outputId": "2d5097b7-fde1-475a-ae1d-038622503535"
       },
-      "execution_count": 325,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1016,7 +1023,7 @@
         "id": "Z9SzSavgVtyv",
         "outputId": "1d700ec4-2fd5-4234-af7e-520679a9ebdf"
       },
-      "execution_count": 326,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1048,7 +1055,7 @@
         "id": "SALw8workfet",
         "outputId": "f99f2d8b-0595-4826-8c1c-980d8a23e07f"
       },
-      "execution_count": 327,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1316,7 +1323,7 @@
         "id": "LFI7AY8G0tdQ",
         "outputId": "969ba257-1bb3-485b-c97c-f1f17438d350"
       },
-      "execution_count": 328,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1394,7 +1401,7 @@
         "id": "E-jGyz-r0Cva",
         "outputId": "511ee27f-0961-4bfa-bfd3-d71c7d424957"
       },
-      "execution_count": 329,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1436,7 +1443,7 @@
         "id": "W2iSpV_I0OWk",
         "outputId": "cc51e948-0792-4f58-e130-5e9735390ad4"
       },
-      "execution_count": 330,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1494,7 +1501,7 @@
         "id": "DXMbsU4I6GlH",
         "outputId": "00f91d01-1143-490f-eb41-93ab5294c55e"
       },
-      "execution_count": 331,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,7 +1534,7 @@
         "id": "FlW1cGgB60Ba",
         "outputId": "a5c7a314-0b24-4262-8518-29ebc1ea2c33"
       },
-      "execution_count": 332,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1599,7 +1606,7 @@
         "id": "98lhRxXL7XI9",
         "outputId": "816bbb5d-f5c2-4897-a4c4-eb7a51ad2f70"
       },
-      "execution_count": 333,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1630,7 +1637,7 @@
         "id": "9qM5om6I7k_n",
         "outputId": "b887a25e-a861-4dea-dc2a-fdfa1381c982"
       },
-      "execution_count": 334,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1686,7 +1693,7 @@
         "id": "vM5X2Pg07sdE",
         "outputId": "7af90501-704f-4f49-96ee-0277c7240943"
       },
-      "execution_count": 335,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1745,7 +1752,7 @@
         "id": "hNBaDMfzOwAf",
         "outputId": "dbc30d3d-f081-447d-a25b-cbee60979e42"
       },
-      "execution_count": 336,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2024,7 +2031,7 @@
         "id": "z-SzufLlUNbh",
         "outputId": "5d7493bf-a080-40fd-d459-b33f2d4e6545"
       },
-      "execution_count": 337,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2292,7 +2299,7 @@
         "id": "Z81uVDYDH_Tq",
         "outputId": "7223337d-7e17-43d1-fd71-6b5c001b425b"
       },
-      "execution_count": 338,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2539,7 +2546,7 @@
         "id": "NR5iWOhRZky9",
         "outputId": "f5674822-8064-4d1b-87a9-eaf9904cc581"
       },
-      "execution_count": 339,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2574,7 +2581,7 @@
       "metadata": {
         "id": "aUtote34bBf8"
       },
-      "execution_count": 340,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2589,7 +2596,7 @@
         "id": "bun3TbQObHT5",
         "outputId": "ead70b9e-4582-4fdc-8baf-f6e5c761bfa7"
       },
-      "execution_count": 341,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2620,7 +2627,7 @@
       "metadata": {
         "id": "RJW9ALcIY62a"
       },
-      "execution_count": 342,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2636,7 +2643,7 @@
         "id": "aft-dFumbXsk",
         "outputId": "e65cdf70-d1b0-40e9-b580-d89cca5a692a"
       },
-      "execution_count": 343,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2883,7 +2890,7 @@
         "id": "e0_LwmVobeDx",
         "outputId": "b7a8d8e2-0f3e-4699-e11b-dd7ec0eb43e0"
       },
-      "execution_count": 344,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2943,7 +2950,7 @@
         "id": "JUsfUXcLddD8",
         "outputId": "daad051f-ebe1-4d3b-c1b5-6964b045fd91"
       },
-      "execution_count": 345,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3192,7 +3199,7 @@
         "id": "dwrQrFxxddKq",
         "outputId": "2a41a35c-fe73-47e4-ae1b-a156c19c51a3"
       },
-      "execution_count": 346,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3434,7 +3441,7 @@
         },
         "outputId": "bf7d51c1-b175-495b-8308-0f5a5cfbc596"
       },
-      "execution_count": 347,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3481,7 +3488,7 @@
         },
         "outputId": "c545240a-c1c3-439f-a52e-118b3ab715b6"
       },
-      "execution_count": 348,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3527,7 +3534,7 @@
         "id": "jJ085YqIYy4f",
         "outputId": "4d1e4673-b689-4ec0-98aa-9bd682a72f7b"
       },
-      "execution_count": 349,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3588,7 +3595,7 @@
         },
         "outputId": "89022e8e-2a36-4a49-da2d-ad52949aa02a"
       },
-      "execution_count": 350,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3614,7 +3621,7 @@
         "id": "lOXsxEeZYM1e",
         "outputId": "b2f9789e-7c15-4003-bf7b-a40d820b8529"
       },
-      "execution_count": 351,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3649,7 +3656,7 @@
         },
         "outputId": "ffed38d5-2090-4e43-c18d-2353a93fe2e2"
       },
-      "execution_count": 352,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3686,7 +3693,7 @@
         },
         "outputId": "c9456444-88fd-4682-9685-6ddfa2c56e73"
       },
-      "execution_count": 353,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3768,7 +3775,7 @@
         "id": "HLk2w6dMer5i",
         "outputId": "35849296-68aa-43e8-db29-0e36d1bdc043"
       },
-      "execution_count": 354,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4000,7 +4007,7 @@
         "id": "rkaPOO1GehJ9",
         "outputId": "3d09e513-c935-4c98-f294-01e4c973cca6"
       },
-      "execution_count": 355,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4077,7 +4084,7 @@
         "id": "h2cno7c40QtD",
         "outputId": "59a50706-1f87-45d4-f09c-3d41be265412"
       },
-      "execution_count": 356,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4129,7 +4136,7 @@
       "metadata": {
         "id": "P7e44ncC6J9p"
       },
-      "execution_count": 357,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4139,13 +4146,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "sAuG3NHyj3vA",
         "outputId": "f691ccca-3e8a-4ada-f65e-83849033b374"
       },
-      "execution_count": 358,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4396,12 +4402,11 @@
       "metadata": {
         "id": "GdncUX4_kOCO",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "041c4b53-adde-481c-c95c-cfe36350f1ff"
       },
-      "execution_count": 359,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4662,7 +4667,7 @@
         "id": "grANZ-_K5oYL",
         "outputId": "022343d9-12dd-46d5-ca1c-afe67f5054b2"
       },
-      "execution_count": 360,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4688,13 +4693,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IcikVSh952CH",
         "outputId": "194ef9d9-2f31-4db8-ef5e-f0732dbb79dc"
       },
-      "execution_count": 361,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4948,7 +4952,7 @@
         "id": "LYu0VBWE56nT",
         "outputId": "3ca229ef-7ebe-47e7-ba13-9e401b1b5929"
       },
-      "execution_count": 362,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4972,7 +4976,7 @@
         "id": "c6j9dO2J6cdt",
         "outputId": "cad5dc2e-2470-4e44-d800-993e8ffcc080"
       },
-      "execution_count": 363,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5014,7 +5018,7 @@
         "id": "jvDc4xZh62RH",
         "outputId": "5446e4e0-a8a5-411c-fec8-347bbc1220ab"
       },
-      "execution_count": 364,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5077,7 +5081,7 @@
         "id": "JgNRygW67RI3",
         "outputId": "20da3c41-4b72-4a93-9c6c-a0782def5610"
       },
-      "execution_count": 365,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5126,7 +5130,7 @@
         "id": "15BE4KWq7JVo",
         "outputId": "d4b1cccd-26c8-432e-ac71-041d3dfe0d51"
       },
-      "execution_count": 366,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5158,13 +5162,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4xciQF3I7M1n",
         "outputId": "c6244ba3-f4f3-482f-baad-9aba88656d47"
       },
-      "execution_count": 367,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5426,13 +5429,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "OcQPXCfV70Mp",
         "outputId": "be3ea658-144e-45af-b4c0-e6ef37ec06bc"
       },
-      "execution_count": 368,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5679,7 +5681,7 @@
         "id": "nR7qV5it79S3",
         "outputId": "7cf2c078-b791-48b5-af27-1cbfabce8d13"
       },
-      "execution_count": 369,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5714,7 +5716,7 @@
       "metadata": {
         "id": "eWF5v6wR8AQB"
       },
-      "execution_count": 370,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5729,7 +5731,7 @@
         "id": "Vr4VkmO18CWP",
         "outputId": "5dd8f948-7623-4429-9cf7-a52ab863cb37"
       },
-      "execution_count": 371,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5760,7 +5762,7 @@
       "metadata": {
         "id": "yb2J5Wv08De7"
       },
-      "execution_count": 372,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5775,7 +5777,7 @@
         "id": "v7cyEKmq8H0t",
         "outputId": "eb792ee8-0b47-466c-d9d5-06aa6a50ff3a"
       },
-      "execution_count": 373,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5835,8 +5837,7 @@
         "\n",
         "\n",
         "print(x_train.shape, y_train.shape)\n",
-        "print(y_test.shape, y_test.shape)\n",
-        ""
+        "print(y_test.shape, y_test.shape)\n"
       ],
       "metadata": {
         "colab": {
@@ -5845,7 +5846,7 @@
         "id": "b1gTXB1585Nq",
         "outputId": "6a20d6cc-433e-4e96-fbd4-e84de9d68467"
       },
-      "execution_count": 374,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5878,7 +5879,7 @@
       "metadata": {
         "id": "CVCIYJcxAVEU"
       },
-      "execution_count": 375,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5907,7 +5908,7 @@
         "id": "CF_rlKun890D",
         "outputId": "ef1140b6-3645-408e-88f4-1c4fa464e701"
       },
-      "execution_count": 376,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5930,7 +5931,7 @@
         "id": "9WTZK6UXDCHj",
         "outputId": "7979a813-1f1b-4090-f2d2-3ec80c4f1100"
       },
-      "execution_count": 377,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5959,7 +5960,7 @@
         "id": "RCNrXFeuF4bp",
         "outputId": "3d50d8d7-d5a2-4d31-afc7-560ed8a076cc"
       },
-      "execution_count": 378,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6002,7 +6003,7 @@
         "id": "1tzVdW2w_oap",
         "outputId": "383ce85f-0667-4d87-b6fa-7c1f6180debe"
       },
-      "execution_count": 379,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6039,7 +6040,7 @@
         "id": "78-cD5v_Kcaz",
         "outputId": "ea450b73-64e9-4c6b-fe14-e513cd0fc8bf"
       },
-      "execution_count": 383,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6076,7 +6077,7 @@
         "id": "pQXtXRTcCIVo",
         "outputId": "aef242f4-faff-4aa3-a731-1ec8eb077d57"
       },
-      "execution_count": 381,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6123,7 +6124,7 @@
         "id": "OzeN6RjNFeLn",
         "outputId": "ff1acae0-7d0c-4eb2-c920-5c4e2c91d8f1"
       },
-      "execution_count": 394,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
